# pymu-main

./: .gitignore  CopilotOutputs.md  README.md  pyproject.toml
pymu/: main.py  sandbox.ipynb  utils.py
pymu/core/: audio_engine.py
pymu/digital_signal_processing/: analysis.py  example.py  processors.py  synthesisers.py
tests/: test_main.py  test_synthesise.py
