[project]
name = "pymu"
version = "0.1.0"
description = "A Python library for music theory and composition."
authors = [
    {"name" = "Will F Castle", "email" = "will.f.castle@gmail.com"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
keywords = ["music", "theory", "composition"]

dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "jupyterlab",
    "ipywidgets",
    "ipykernel",
    "tqdm",
    "matplotlib",
    "plotly",
    "ruff",
    "pytest>=8.3.5",
    "sounddevice>=0.5.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pylint.format]
max-line-length = 120

[tool.ruff]
line-length = 120
fix = true
